# smarter-public-transport

./: README.md  config.yaml  main.py  pyproject.toml
.claude/: CLAUDE.md
src/: __init__.py
src/core/: __init__.py  config.py  line.py  passenger.py  station.py  train.py
src/data/: gtfs_loader.py
src/routing/: router.py
src/simulation/: __init__.py  simulator.py
src/utils/: geometry.py
src/visualization/: __init__.py  pygame_visualizer.py
