[project]
name = "public-transport-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "numpy>=1.26.0",
    "pygame-ce>=2.5.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]
